# dismod

./: .gitignore  .gitinclude  .gitmodules  CMakeLists.txt  d8input.def  library.cpp  library.cpp~  library.h  readme.md
include/: dishonored.h  hook.h  logger.h  mathy.h  queue.h
resources/: empress.png.hpp
src/engine/: engine.cpp  engine.h  filesystem.cpp  filesystem.h  finder.cpp  finder.h  state.cpp  state.h
src/hooks/: load_package.cpp  load_package_async.cpp  load_package_async.h  post_render.cpp  post_render.h  process_event.cpp  process_event.h  static_construct_object.cpp  static_construct_object.h  static_load_object.cpp  static_load_object.h  steam.h
src/hooks/dishonored/: add_new_component.cpp  add_new_component.h  create_npc_pawn.cpp  create_npc_pawn.h  get_global_ai_brain_manager.cpp  get_global_ai_brain_manager.h  init_npc.cpp  init_npc.h  locomotion.cpp  locomotion.h  npc.cpp  npc.h  save.cpp  save.h  tick_brain.cpp  tick_brain.h  world.cpp  world.h
src/hooks/dishonored/components/: ai_knowledge.h  ai_monitor.h  component_base.h  init_sterring.h  look_at.h
src/hooks/engine/: engine_tick.cpp  engine_tick.h  load_package.cpp  load_package.h  load_package_async.cpp  load_package_async.h  process_event.cpp  process_event.h  spawn_actor.cpp  spawn_actor.h  spawn_actor_from_tweaks.cpp  spawn_actor_from_tweaks.h  static_construct_object.cpp  static_construct_object.h  static_duplicate_object.cpp  static_duplicate_object.h  static_find_object.cpp  static_find_object.h  static_load_object.cpp  static_load_object.h
src/hooks/render/: end_scene.cpp  end_scene.h
src/hooks/sound/: fire_dialog.cpp  fire_dialog.h  load_bank.cpp  load_bank.h
src/mods/: spawn.cpp  spawn.h  world.cpp  world.h
src/render/: render.cpp  render.h
